--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,16 @@
   --gray: #3d3d3d;
   --gray2: #6F6F6F;
   --gray3: #e1e1e1;
+  --search-bg: #F9F9F8;
 
   --app-display: flex;
   --app-flex-direction: row;
 
   --section-w: 70%;
   --aside-w: 30%;
+
+  --header-display: flex;
+  --header-flex-direction: row;
 }
 
 html {
@@ -27,6 +31,7 @@ body {
 .app {
   display: var(--app-display);
   flex-direction: var(--app-flex-direction);
+  flex-wrap: wrap;
 
   section {
     width: var(--section-w);
@@ -35,5 +40,45 @@ body {
   aside {
     width: var(--aside-w);
   }
+}
+
+.header {
+  display: var(--header-display);
+  flex-direction: var(--header-flex-direction);
+  flex-wrap: wrap;
+  align-items: center; /* verticalmente */
+
+  .search {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center; /*stretch*/
+    // justify-content: center;
+    height: 4.8rem;
+    background-color: var(--search-bg);
+    border-radius: 1.5rem;
+    width: 60%;
+
+    .logo-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 1rem;
+      img {
+        width: 1.6rem;
+      }
+    }
+
+    .search-input {
+      border: none;
+      background-color: inherit;
+    }
+    .search-input:focus {
+      border: none;
+      outline: none;
+    }
+
+  }
+
 }
 
