Header | hamburger-button

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,10 @@ body {
   flex-wrap: wrap;
   align-items: center; /* verticalmente */
 
+  img {
+    width: 2.6rem;
+  }
+
   .search {
     display: flex;
     flex-direction: row;
