--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,6 @@
   --section-w: 95%;
   --aside-w: 25%;
 
-  --header-display: flex;
   --header-flex-direction: row;
 
   @media screen and (max-width: 100px) {
@@ -49,12 +48,10 @@ body {
 }
 
 .header {
-  display: var(--header-display);
+  display: flex;
   flex-direction: var(--header-flex-direction);
   flex-wrap: wrap;
   align-items: center; /* verticalmente */
-  // justify-content: space-evenly;
-  // padding: 0 1rem;
   width: 90%;
   margin: 0 auto;
   padding: 1vmin 0; /* * */
@@ -67,11 +64,11 @@ body {
   .logo {
     font-size: 2.3rem;
     font-weight: 600;
-    width: 30%;
+    // width: 30%;
+    flex: 1 1 30%;
   }
 
   .search {
-    flex: 1 1 5rem;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -80,7 +77,8 @@ body {
     height: 4.8rem;
     background-color: var(--search-bg);
     border-radius: 1.5rem;
-    width: 60%;
+    flex: 1 1 60%;
+    width: 100%;
 
     .icon-container {
       display: flex;
@@ -95,6 +93,8 @@ body {
     .search-input {
       border: none;
       background-color: inherit;
+      flex: 1 1 20%;
+      max-width: 70%;
     }
     .search-input:focus {
       border: none;
