--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 // @import "assets/scss/config/variables";
 @import "assets/scss/components/promo";
+@import "assets/scss/components/card";
+@import "assets/scss/components/cards";
 
 :root {
   --white: #FFF;
