--- a/src/assets/scss/components/promo.scss
+++ b/src/assets/scss/components/promo.scss
@@ -4,9 +4,11 @@
     flex-wrap: wrap;
     width: 90%;
     margin: 0 auto;
-    height: 31.5rem;
+    // height: 31.5rem;
+    position: relative;
     .img-container {
-        flex: 1 1 20rem;
+        flex: 1 1 12.2rem;
+        display: block;
         .container {
             min-width: 15rem;
             max-width: 20rem;
@@ -19,8 +21,10 @@
         }
     }
     .info-container{
-        flex: 1 1 25rem;
-        
+        flex: 1 1 31rem;
+        display: block;
+        align-self: center;
+        padding: 2rem;
         img {
             width: 2rem;
             margin-left: 1rem;
@@ -40,7 +44,8 @@
         }
     }
     .more-container{
-        flex: 1 1 20rem;
+        flex: 1 1 15rem;
+        align-self: flex-end;
         p {
             text-align: right;
             color: var(--promo-color);
@@ -52,9 +57,9 @@
         width: 100%;
         height: 90%;
         background-color: var(--promo-bg);
-        position: relative;
-        bottom: 28.5rem;
+        position: absolute;
+        bottom: 0;
         z-index: -1;
-        border-radius: 7%;
+        border-radius: 20px;
     }
 }
