--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -5,4 +5,5 @@
 	grid-gap: 1em;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     justify-items: center;  
+    padding: 3rem 0;
 }
