--- a/src/assets/scss/components/card.scss
+++ b/src/assets/scss/components/card.scss
@@ -46,7 +46,7 @@
         }
 
         div {
-            width: 4rem;
+            // width: 4rem;
             p {
                 margin-left: 0.8rem;
                 display: inline;
